--- a/InternetStore/InternetStore/InternetStore.csproj
+++ b/InternetStore/InternetStore/InternetStore.csproj
@@ -8,6 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="InternetBooksStore.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="InternetBooksStore.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
       <PrivateAssets>all</PrivateAssets>
